# anime-highlights

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  GEMINI.md  README.md  main.py  pyproject.toml  test_pipeline.py
core/: audio_analyzer.py  scene_detector.py  scorer.py  video_analyzer.py
docs/: WEIGHTS.md
utils/: ffmpeg_helper.py  logger.py
