[project]
name = "anime-highlights"
version = "0.1.0"
description = "Extract highlights from anime videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
# Target Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E), isort (I)
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
